Bug 406415 - Dock does not always hide
Summary: Dock does not always hide
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: 0.8.7
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-10 19:13 UTC by attila.koszo.official
Modified: 2019-05-01 21:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description attila.koszo.official 2019-04-10 19:13:31 UTC
STEPS TO REPRODUCE
1. have latte dock set to Auto hide and have a reasonable delay show
2. move cursor to dock to reveal it
3. while it moves animation starts I flick to mouse out of the dock area
4. (if I did it fast enough) dock won't hide until I move mouse to dock area again

OBSERVED RESULT
dock doesn't hide

EXPECTED RESULT
dock auto hides


SOFTWARE/OS VERSIONS
Linux: 5.0.7-arch1-1-ARCH
(available in About System)
KDE Plasma Version: 5.15.4
KDE Frameworks Version: 5.56
Qt Version: 5.12.2
Comment 1 Michail Vourlakos 2019-04-10 19:28:12 UTC
can you test if this is reproducible with LAtte git version in your system?
Comment 2 attila.koszo.official 2019-04-10 19:51:05 UTC
(In reply to Michail Vourlakos from comment #1)
> can you test if this is reproducible with LAtte git version in your system?

I was tring really hard to reproduce it and out of 30 times I could still do it 2 times.
Comment 3 attila.koszo.official 2019-04-10 19:56:55 UTC
So this bug occurs in d5b294b88e99 commit too.
Comment 4 Michail Vourlakos 2019-04-10 20:13:40 UTC
hm...
I manage to reproduce from one of ten times trying it...

In your Behavior page do you have KWin edges enabled or not?
Comment 5 attila.koszo.official 2019-04-10 20:24:12 UTC
(In reply to Michail Vourlakos from comment #4)
> hm...
> I manage to reproduce from one of ten times trying it...
> 
> In your Behavior page do you have KWin edges enabled or not?

it's enabled
Comment 6 Michail Vourlakos 2019-04-10 20:28:38 UTC
when I disabled KWin edge option I could not reproduce, can you confirm it?
Comment 7 attila.koszo.official 2019-04-10 20:38:24 UTC
(In reply to Michail Vourlakos from comment #6)
> when I disabled KWin edge option I could not reproduce, can you confirm it?

I turned KWin edge off and its still there altough it's harder and harder to hit the timeframe.
Comment 8 attila.koszo.official 2019-04-15 01:19:07 UTC
8.8 seems to fixed the issue.
Comment 9 attila.koszo.official 2019-04-15 13:17:57 UTC
sorry it's not fixed, my bad
Comment 10 attila.koszo.official 2019-04-19 21:25:05 UTC
In a Wayland session the bug couldn't be reproduced. Apparently it's an Xorg bug.
Does it mean that the issue is resolved?
Comment 11 Michail Vourlakos 2019-04-20 03:27:06 UTC
(In reply to attila.koszo.official from comment #10)
> In a Wayland session the bug couldn't be reproduced. Apparently it's an Xorg
> bug.
> Does it mean that the issue is resolved?

Not quite. First I will need to investigate what is the reason of the faulty behavior under X11. If Latte can handle the case e.g. when the slide in animation ends, Latte could make a check if the dock should be hidden or not, and act accordingly
Comment 12 Michail Vourlakos 2019-05-01 21:11:30 UTC
Git commit c38e3016de4b58194df6352807596621bac83783 by Michail Vourlakos.
Committed on 01/05/2019 at 21:10.
Pushed by mvourlakos into branch 'master'.

update hidden state after slide-in

M  +2    -0    app/view/visibilitymanager.cpp
M  +3    -2    app/view/visibilitymanager.h
M  +2    -0    containment/package/contents/ui/VisibilityManager.qml

https://commits.kde.org/latte-dock/c38e3016de4b58194df6352807596621bac83783