update hidden state after slide-in

BUG: 406415