app/view/visibilitymanager.cpp
@@ -52,6 +52,8 @@ VisibilityManager::VisibilityManager(PlasmaQuick::ContainmentView *view)
     m_corona = qobject_cast<Latte::Corona *>(view->corona());
     m_wm = m_corona->wm();
 
+    connect(this, &VisibilityManager::slideInFinished, this, &VisibilityManager::updateHiddenState);
+
     if (m_latteView) {
         connect(m_latteView, &Latte::View::eventTriggered, this, &VisibilityManager::viewEventManager);
 
